--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
   </style>
 </head>
 <body>
+    
+<div class="container">
+    <header>
+      <img src="roshni_passport.png" alt="Roshni Shaw" class="profile-img">
+      <h1>Roshni Shaw</h1>
+      <p>Python Developer</p>
+    </header>
+
 
 <div class="container">
   <header>
